<resources>
    <string name="app_name">Grupo Zap</string>
    <string name="try_again">Tente Novamente</string>
    <string name="error_try_again">Erro tente novamente</string>

    <string name="load_more">Carregando mais opções...</string>
    <string name="emptyList">Nada para ver aqui, essa lista está vazia</string>
    <string name="load_data_error">Ocorreu um erro ao buscar os dados</string>
    <string name="error_update_list">Erro ao tentar atualizar lista</string>
    <string name="viva_real">Viva Real</string>
    <string name="zap">Zap</string>

    <string name="property_sell_title">Imóvel para vender</string>
    <string name="property_rental_title">Imóvel para alugar</string>

    <string name="property_address">%1$s, %2$s</string>
    <string name="property_area">%1$sm²</string>

    <string name="property_detail_bedrooms">Quartos: %1$d</string>
    <string name="property_detail_bathrooms">Banheiros: %1$d</string>
    <string name="property_detail_parking">Vagas: %1$s</string>
    <string name="title_activity_maps">Map</string>

    <string name="property_sell_title_detail">Imóvel com %1$d quarto(s) para vender, %2$dm²</string>
    <string name="property_rental_title_detail">Imóvel com %1$d quarto(s) para alugar, %2$dm²</string>
    <string name="property_IPTU_value_detail">R$ %1$d,00/mês</string>
    <string name="property_total_rental_value_detail">%1$s/mês</string>
    <string name="last_updated_time">Atualizado há %1$d dia(s)</string>
    <string name="total_value_label">Total:</string>
    <string name="iptu_value_label">IPTU:</string>
    <string name="condofee_value_label">Condomínio:</string>
    <string name="rental_property">Aluguel:</string>
    <string name="property_value">Valor do imóvel:</string>

    <string name="marker_title">Seu próximo lar</string>
</resources>