<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollableLayout"
    android:fitsSystemWindows="true"
    tools:context=".view.PropertyDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:visibility="invisible"
            android:id="@+id/guideImageTop"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/headerLayout"
            android:layout_height="15dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="@+id/guideImageTop"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:id="@+id/propertyDetailImage">

            <androidx.viewpager.widget.ViewPager
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:id="@+id/propertyImagePagerDetail"
                android:layout_height="match_parent"/>

            <br.com.zapgroup.view.customView.PropertyPagerCount
                android:id="@+id/nextPagerDetail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/activity_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/back"
                android:id="@+id/backButton"/>

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/ButtonTitleTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/screenTitle"
                android:layout_margin="8dp"
                android:text="@string/property_rental_title"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_margin="16dp"
            android:id="@+id/contentLayout"
            app:layout_constraintTop_toBottomOf="@+id/propertyDetailImage"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/propertyTitle"
                style="@style/TitleText"
                tools:text="Casa com 1 quarto para alugar, 59 m2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:id="@+id/propertyAddressDetail"
                style="@style/DescriptionText"
                tools:text= "Rua Padre Paulo Rávier, 123, São Paulo-SP, 02408-060 Brasil"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastUpdateDate"
                style="@style/SmallDescriptionText"
                tools:text= "Atualizado há 3 dias"/>

            <br.com.zapgroup.view.customView.PropertyPillView
                android:id="@+id/propertyDetailsDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"/>

            <LinearLayout
                android:weightSum="2"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/propertyValueLabel"
                    android:layout_weight="1"
                    style="@style/MoneyDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/property_value"/>

                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    style="@style/MoneyTextDetail"
                    android:id="@+id/propertyPriceDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text= "R$ 1200,00"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/condofeeLayout"
                android:visibility="gone"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/MoneyDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/condofee_value_label"/>

                <TextView
                    android:layout_weight="1"
                    style="@style/MoneyTextDetail"
                    android:id="@+id/propertyCondofee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text= "Condomínio R$ 200,00"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iptuLayout"
                android:visibility="gone"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    style="@style/MoneyDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/iptu_value_label"/>

                <TextView
                    android:layout_weight="1"
                    style="@style/MoneyTextDetail"
                    android:id="@+id/propertyIptuDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text= "IPTU R$ 40,00"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/totalLayout"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:layout_weight="1"
                    style="@style/MoneyDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_value_label"/>

                <TextView
                    android:textStyle="bold"
                    android:layout_weight="1"
                    style="@style/MoneyTextDetail"
                    android:id="@+id/propertyTotalValueDetail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text= "TOTAL R$ 1440,00"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toBottomOf="@+id/contentLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/map_layout"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="18dp"
            android:layout_height="300dp">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.PropertyDetailActivity" />

            <ImageView
                android:id="@+id/mapImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/transparent" />


            <ImageView
                android:id="@+id/mapHomeButton"
                android:src="@drawable/house"
                android:padding="8dp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="18dp"
                android:background="@drawable/circle_active"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>